--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -13,9 +13,11 @@ jobs:
       - name: Check if previous workflow was successful
         run: |
           if [[ "${{ github.event.workflow_run.conclusion }}" != "success" ]]; then
-            echo "Previous workflow was not successful." >> $GITHUB_STEP_SUMMARY
-            echo "outcome=Previous workflow was not successful." >> $GITHUB_OUTPUT
+            echo "### ❌ Previous Workflow Failed" >> $GITHUB_STEP_SUMMARY
+            echo "The triggering workflow did not complete successfully, please review the workflow run details." >> $GITHUB_STEP_SUMMARY
             exit 1
+          else
+            echo "### ✅ Previous Workflow Succeeded" >> $GITHUB_STEP_SUMMARY
           fi
         shell: bash
 
@@ -25,12 +27,11 @@ jobs:
       - name: Check PAT
         run: |
           if [[ -z "${{ secrets.PAT }}" ]]; then
-            echo "PAT is not set." >> $GITHUB_STEP_SUMMARY
-            echo "outcome=PAT is not set." >> $GITHUB_OUTPUT
+            echo "### ❌ PAT Error" >> $GITHUB_STEP_SUMMARY
+            echo "The `PAT` secret is not set, which is required for git operations." >> $GITHUB_STEP_SUMMARY
             exit 1
           else
-            echo "PAT is set." >> $GITHUB_STEP_SUMMARY
-            echo "outcome=PAT is set." >> $GITHUB_OUTPUT
+            echo "### ✅ PAT Found" >> $GITHUB_STEP_SUMMARY
           fi
         shell: bash
 
@@ -38,56 +39,75 @@ jobs:
     needs: [check-previous-workflow, check-token]
     runs-on: ubuntu-latest
     steps:
-      - name: Download version artifact
-        uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v2
         with:
           name: version-${{ github.event.workflow_run.id }}
           path: .
-      - name: Check if version.txt exists
+      - name: Read BUMP_TYPE from version file
+        id: read_version_file
         run: |
           if [[ ! -f version.txt ]]; then
-            echo "version.txt does not exist." >> $GITHUB_STEP_SUMMARY
-            echo "outcome=version.txt does not exist." >> $GITHUB_OUTPUT
+            echo "### ❌ Missing version.txt" >> $GITHUB_STEP_SUMMARY
+            echo "The file `version.txt` does not exist. Cannot proceed with version bumping." >> $GITHUB_STEP_SUMMARY
             exit 1
           else
-            echo "version.txt exists." >> $GITHUB_STEP_SUMMARY
-            echo "outcome=version.txt exists." >> $GITHUB_OUTPUT
+            BUMP_TYPE=$(cat version.txt)
+            echo "BUMP_TYPE=${BUMP_TYPE}" >> $GITHUB_ENV
+
+            echo "### 📄 Bump Type" >> $GITHUB_STEP_SUMMARY
+            echo "The BUMP_TYPE set for this run is \`${BUMP_TYPE}\`." >> $GITHUB_STEP_SUMMARY
           fi
         shell: bash
+    outputs:
+      BUMP_TYPE: ${{ steps.read_version_file.outputs.BUMP_TYPE }}
 
   bump-and-push-version:
-    needs: [check-token, download-artifact]
+    needs: download-artifact
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           token: ${{ secrets.PAT }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Bump Version
+      - name: Bump Version and commit
         id: bump
         run: |
-          VERSION_TYPE=$(cat version.txt)
-          npm version $VERSION_TYPE --no-git-tag-version
+          npm version $BUMP_TYPE --no-git-tag-version
           VERSION=$(node -p "require('./package.json').version")
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git commit -am "Bump version to $VERSION"
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-        shell: bash
+          git tag $VERSION
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
 
-      - name: Push changes
+          echo "### 🏷️ New Version" >> $GITHUB_STEP_SUMMARY
+          echo "The project version has been bumped to \`${VERSION}\`." >> $GITHUB_STEP_SUMMARY
+        shell: bash
+      - name: Push changes and tag
         run: |
-          git push origin main
-          git tag v${{ steps.bump.outputs.version }}
-          git push origin v${{ steps.bump.outputs.version }}
+          git push origin main --follow-tags
+
+          echo "### 🚀 Pushed Changes" >> $GITHUB_STEP_SUMMARY
+          echo "The changes including the new tag \`${VERSION}\` have been pushed to the main branch." >> $GITHUB_STEP_SUMMARY
+        shell: bash
+    outputs:
+      version: ${{ steps.bump.outputs.VERSION }}
+
+  create-release:
+    needs: bump-and-push-version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ needs.bump-and-push-version.outputs.version }}
+          name: Release ${{ needs.bump-and-push-version.outputs.version }}
+          draft: false
+          prerelease: false
         env:
-          PAT: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+      - name: Release Summary
+        run: |
+          echo "### 🎉 New Release Created" >> $GITHUB_STEP_SUMMARY
+          echo "A new release version \`${{ needs.bump-and-push-version.outputs.version }}\` has been published!" >> $GITHUB_STEP_SUMMARY
+          echo "[View the new release](https://github.com/${{ github.repository }}/releases/tag/${{ needs.bump-and-push-version.outputs.version }})" >> $GITHUB_STEP_SUMMARY
+        shell: bash
