--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -39,43 +39,41 @@ jobs:
     needs: [check-previous-workflow, check-token]
     runs-on: ubuntu-latest
     steps:
-      - name: Wait and download version artifact
-        run: |
-          attempt_number=1
-          max_attempts=10
-          artifact_name="version-${{ github.event.workflow_run.id }}"
-          while [ "$attempt_number" -le "$max_attempts" ]; do
-            echo "Attempt $attempt_number of $max_attempts"
-            response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              -H "Accept: application/vnd.github.v3+json" \
-              "https://api.github.com/repos/${{ github.repository }}/actions/artifacts")
-            artifact_id=$(echo "$response" | jq --arg artifact_name "$artifact_name" '.artifacts[] | select(.name==$artifact_name) | .id')
+      - name: Download version artifact
+        uses: actions/github-script@v3.1.0
+        with:
+          script: |
+            const artifacts = await github.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: github.run_id,
+            });
 
-            if [ -n "$artifact_id" ]; then
-              echo "Artifact $artifact_name with ID $artifact_id is available"
-              # If available, download the artifact
-              curl -L -o "version-artifact.zip" \
-                -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/$artifact_id/zip"
-              unzip -j "version-artifact.zip" "version.txt" -d .
-              # Check if the version.txt was extracted successfully
-              if [[ ! -f "version.txt" ]]; then
-                echo "### ❌ Failed to extract version.txt" >> $GITHUB_STEP_SUMMARY
-                exit 1
-              fi
-              break
-            else
-              echo "Artifact $artifact_name is not available yet"
-              if [ "$attempt_number" -eq "$max_attempts" ]; then
-                echo "### ❌ Artifact $artifact_name is not available after $max_attempts attempts" >> $GITHUB_STEP_SUMMARY
-                exit 1
-              fi
-              attempt_number=$((attempt_number+1))
-              echo "Waiting before retrying..."
-              sleep 10
-            fi
-          done
-        shell: bash
+            const matchArtifact = artifacts.data.artifacts.find(artifact => artifact.name === "version-${{ github.run_id }}");
+
+            if (!matchArtifact) {
+              core.setFailed(`Artifact version-${{ github.run_id }} not found.`);
+            }
+
+            const download = await github.actions.downloadArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip',
+            });
+
+            const fs = require('fs');
+            fs.writeFileSync('version-artifact.zip', Buffer.from(download.data));
+
+            // Unzip the artifact
+            require('child_process').execSync('unzip -j version-artifact.zip version.txt -d .');
+
+            // Check if version.txt was extracted successfully
+            if (!fs.existsSync('version.txt')) {
+              core.setFailed('Failed to extract version.txt from the artifact.');
+            }
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Read BUMP_TYPE from version file and set as output
         id: read_bump_type
