--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -44,17 +44,17 @@ jobs:
       github.event.workflow_run.event == 'workflow_run' &&
       github.event.workflow_run.conclusion == 'success'
     steps:
-      - name: 'Download artifact'
+      - name: Download artifact
         uses: actions/github-script@v3.1.0
         with:
           script: |
             const artifacts = await github.actions.listWorkflowRunArtifacts({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                run_id: context.workflow_run.id,
+                run_id: github.event.workflow_run.id,
             });
             const matchArtifact = artifacts.data.artifacts.find((artifact) =>
-              artifact.name === `version-${context.workflow_run.id}`
+              artifact.name === `version-${github.event.workflow_run.id}`
             );
             const download = await github.actions.downloadArtifact({
                 owner: context.repo.owner,
@@ -63,8 +63,8 @@ jobs:
                 archive_format: 'zip',
             });
             const fs = require('fs');
-            fs.writeFileSync(`${context.workspace}/version-artifact.zip`, Buffer.from(download.data));
-      - run: unzip version-artifact.zip
+            fs.writeFileSync('./version-artifact.zip', Buffer.from(download.data));
+      - run: unzip ./version-artifact.zip
 
       - name: Check if version.txt was extracted successfully
         run: |
@@ -80,7 +80,6 @@ jobs:
           BUMP_TYPE=$(cat version.txt)
           echo "### 📄 Bump Type" >> $GITHUB_STEP_SUMMARY
           echo "The BUMP_TYPE set for this run is \`${BUMP_TYPE}\`." >> $GITHUB_STEP_SUMMARY
-          echo "BUMP_TYPE=${BUMP_TYPE}" >> $GITHUB_ENV
           echo "BUMP_TYPE=${BUMP_TYPE}" >> $GITHUB_OUTPUT
         shell: bash
 
@@ -108,7 +107,7 @@ jobs:
           echo "Current BUMP_TYPE: $BUMP_TYPE"
           npm version "$BUMP_TYPE" --no-git-tag-version
           VERSION=$(node -p "require('./package.json').version")
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           git commit -am "Bump version to $VERSION"
           git tag "$VERSION"
           git push origin HEAD:main
