--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -40,42 +40,50 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Wait and download version artifact
-        run: |
-          attempt_number=1
-          max_attempts=10
-          artifact_name="version-${{ github.event.workflow_run.id }}"
-          while [ "$attempt_number" -le "$max_attempts" ]; do
-            echo "Attempt $attempt_number of $max_attempts"
-            response=$(curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              -H "Accept: application/vnd.github.v3+json" \
-              "https://api.github.com/repos/${{ github.repository }}/actions/artifacts")
-            artifact_id=$(echo "$response" | jq --arg artifact_name "$artifact_name" '.artifacts[] | select(.name==$artifact_name) | .id')
+        uses: actions/github-script@v5.1.0
+        with:
+          script: |
+            let attempt_number = 1;
+            const max_attempts = 10;
+            const artifact_name = `version-${context.workflow_run.id}`;
+            while (attempt_number <= max_attempts) {
+              console.log(`Attempt ${attempt_number} of ${max_attempts}`);
+              const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: context.workflow_run.id,
+              });
+              const matchArtifact = artifacts.data.artifacts.find((artifact) =>
+                artifact.name === artifact_name
+              );
 
-            if [ -n "$artifact_id" ]; then
-              echo "Artifact $artifact_name with ID $artifact_id is available"
-              # If available, download the artifact
-              curl -L -o "version-artifact.zip" \
-                -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/$artifact_id/zip"
-              unzip -j "version-artifact.zip" "version.txt" -d .
-              # Check if the version.txt was extracted successfully
-              if [[ ! -f "version.txt" ]]; then
-                echo "### ❌ Failed to extract version.txt" >> $GITHUB_STEP_SUMMARY
-                exit 1
-              fi
-              break
-            else
-              echo "Artifact $artifact_name is not available yet"
-              if [ "$attempt_number" -eq "$max_attempts" ]; then
-                echo "### ❌ Artifact $artifact_name is not available after $max_attempts attempts" >> $GITHUB_STEP_SUMMARY
-                exit 1
-              fi
-              attempt_number=$((attempt_number+1))
-              echo "Waiting before retrying..."
-              sleep 10
-            fi
-          done
-        shell: bash
+              if (matchArtifact) {
+                console.log(`Artifact ${artifact_name} with ID ${matchArtifact.id} is available`);
+                const download = await github.rest.actions.downloadArtifact({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  artifact_id: matchArtifact.id,
+                  archive_format: 'zip',
+                });
+                const fs = require('fs');
+                fs.writeFileSync('./version-artifact.zip', Buffer.from(download.data));
+                const unzip = require('child_process').execSync('unzip -j "version-artifact.zip" "version.txt" -d .');
+                if (!fs.existsSync('version.txt')) {
+                  console.log('### ❌ Failed to extract version.txt');
+                  process.exit(1);
+                }
+                break;
+              } else {
+                console.log(`Artifact ${artifact_name} is not available yet`);
+                if (attempt_number === max_attempts) {
+                  console.log(`### ❌ Artifact ${artifact_name} is not available after ${max_attempts} attempts`);
+                  process.exit(1);
+                }
+                attempt_number++;
+                console.log('Waiting before retrying...');
+                await new Promise(resolve => setTimeout(resolve, 10000));
+              }
+            }
 
       - name: Read BUMP_TYPE from version file and set as output
         id: read_bump_type
@@ -136,8 +144,8 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ needs.bump-and-push-version.outputs.VERSION }}
-          name: Release v${{ needs.bump-and-push-version.outputs.VERSION }}
+          tag_name: ${{ needs.bump-and-push-version.outputs.VERSION }}
+          name: ${{ needs.bump-and-push-version.outputs.VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
 
