--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -45,13 +45,13 @@ jobs:
           script: |
             let attempt_number = 1;
             const max_attempts = 10;
-            const artifact_name = `version-${context.workflow_run.id}`;
+            const artifact_name = `version-${github.event.workflow_run.id}`;
             while (attempt_number <= max_attempts) {
               console.log(`Attempt ${attempt_number} of ${max_attempts}`);
               const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                run_id: context.workflow_run.id,
+                run_id: github.event.workflow_run.id,
               });
               const matchArtifact = artifacts.data.artifacts.find((artifact) =>
                 artifact.name === artifact_name
