--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -39,52 +39,40 @@ jobs:
     needs: [check-previous-workflow, check-token]
     runs-on: ubuntu-latest
     steps:
-      - name: Wait and download version artifact
+      - name: Download version artifact
         uses: actions/github-script@v7
         env:
           WORKFLOW_RUN_ID: ${{ github.event.workflow_run.id }}
         with:
           script: |
-            let attempt_number = 1;
-            const max_attempts = 10;
             const artifact_name = `version-${process.env.WORKFLOW_RUN_ID}`;
-            while (attempt_number <= max_attempts) {
-              console.log(`Attempt ${attempt_number} of ${max_attempts}`);
-              const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                run_id: process.env.WORKFLOW_RUN_ID,
-              });
-              const matchArtifact = artifacts.data.artifacts.find((artifact) =>
-                artifact.name === artifact_name
-              );
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: process.env.WORKFLOW_RUN_ID,
+            });
+            const matchArtifact = artifacts.data.artifacts.find((artifact) =>
+              artifact.name === artifact_name
+            );
 
-              if (matchArtifact) {
-                console.log(`Artifact ${artifact_name} with ID ${matchArtifact.id} is available`);
-                const download = await github.rest.actions.downloadArtifact({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  artifact_id: matchArtifact.id,
-                  archive_format: 'zip',
-                });
-                const fs = require('fs');
-                fs.writeFileSync('./version-artifact.zip', Buffer.from(download.data));
-                const unzip = require('child_process').execSync('unzip -j "version-artifact.zip" "version.txt" -d .');
-                if (!fs.existsSync('version.txt')) {
-                  console.log('### ❌ Failed to extract version.txt');
-                  process.exit(1);
-                }
-                break;
-              } else {
-                console.log(`Artifact ${artifact_name} is not available yet`);
-                if (attempt_number === max_attempts) {
-                  console.log(`### ❌ Artifact ${artifact_name} is not available after ${max_attempts} attempts`);
-                  process.exit(1);
-                }
-                attempt_number++;
-                console.log('Waiting before retrying...');
-                await new Promise(resolve => setTimeout(resolve, 10000));
-              }
+            if (!matchArtifact) {
+              console.log(`### ❌ Artifact ${artifact_name} is not available`);
+              process.exit(1);
+            }
+
+            console.log(`Artifact ${artifact_name} with ID ${matchArtifact.id} is available`);
+            const download = await github.rest.actions.downloadArtifact({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              artifact_id: matchArtifact.id,
+              archive_format: 'zip',
+            });
+            const fs = require('fs');
+            fs.writeFileSync('./version-artifact.zip', Buffer.from(download.data));
+            const unzip = require('child_process').execSync('unzip -j "version-artifact.zip" "version.txt" -d .');
+            if (!fs.existsSync('version.txt')) {
+              console.log('### ❌ Failed to extract version.txt');
+              process.exit(1);
             }
 
       - name: Read BUMP_TYPE from version file and set as output
